--- a/index.html
+++ b/index.html
@@ -1,63 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<!-- ======= ======= head ======= ======= -->
-	<head>
-		<meta charset="utf-8">
-		<title>Hogwarts Database</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <title>ERMDB</title>
+</head>
+<body>
+  <nav>
+    <button id="Titanic">Titanic</button>
+    <button id="Terminator_2">Terminator 2</button>
+  </nav>
+  <div id="moviePage">
+    <header>
+      <div id="title">Title</div>
+      <span id="director">Director</span> |
+      <span id="genre">Genre</span> |
+      <span id="filmRating">Film Rating</span>
+    </header>
+    <main>
+      <img id="poster" src="https://curriculum-content.s3.amazonaws.com/web-development/film-reel.jpg" alt="movie poster"/>
+      <div id="description">Description</div>
+      <div>Audience Score: <span id="audienceScore">Audience Score</span></div>
+      <div id="listSection">
+        <div>
+          <h2>Cast</h2>
+          <div id="cast"></div>
+        </div>
+        <div>
+          <h2>Reviews</h2>
+          <div id='reviews'></div>
+        </div>
+      </div>
+    </main>
+  </div>
 
-		<!-- == styles == -->
-		<link rel="stylesheet" type="text/css" href="index.css">
-	</head>
-
-	<!-- ======= ======= body start ======= ======= -->
-	<body>
-
-		<!-- == wrapper start == -->
-		<div id="wrapper">
-
-
-			<!-- ======= layout ======= -->
-			<header>
-				<h1 id="mainTitle">JS Starter</h1> 
-			</header>
-			<aside>
-				<h3 class="subTitle">info</h3>
-				<p></p>
-				<p id="message"></p>
-			</aside>
-			<div id="hogwarts" class="clearfix">
-				<div>
-					<p class="infoLabel">students</p>
-					<p class="infoData" id="students"></p>
-				</div>
-				<div>
-					<p class="infoLabel">schools</p>
-					<p class="infoData" id="schools"></p>
-				</div>
-
-			</div>
-
-			<!-- ======= gameboard ======= -->
-			<footer>
-				<div class="memberData">
-					<p>Student name:</p>
-					<input id="studentEntry" type="text"></input>
-					<input id="addStudentBtn" type="button" value="Add Student"></input>
-				</div>
-				<div class="memberData">
-					<p>Professor name:</p>
-					<input id="professorEntry" type="text"></input>
-					<input id="addProfBtn" type="button" value="Add Professor"></input>
-				</div>
-			</footer>
-
-
-		</div>
-        <!-- == wrapper end == -->
-
-		<script type="text/javascript" src="index.js"></script>
-
-	</body>
-    <!-- ======= ======= body end ======= ======= -->
-
+  <script type="text/javascript" src="movies.json"></script>
+  <script type="text/javascript" src="index.js"></script>
+</body>
 </html>
